[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Rocksheet.png" type="Texture" id=1]
[ext_resource path="res://Games/Crafting/RockPiece.gd" type="Script" id=2]

[node name="RockPiece" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 5

[node name="Rock0" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -0.900635, -52.8492, -44.3877, -29.5146, -29.1849, 20.6899, 5.10977, 42.9638, 34.4547, 17.5079, 19.959, -37.2928 )
disabled = true

[node name="Rock1" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 1.22069, -31.2824, -28.1243, -29.5146, -28.4778, -5.82657, -43.6806, 12.9118, -36.6095, 36.5998, 11.1202, 38.0141, 40.8187, 22.4577, 40.4651, 11.8511, 10.0595, -32.3431 )
disabled = true

[node name="Rock2" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -5.14328, -48.253, -56.7621, -6.88724, -12.5679, 52.5097, 48.9504, 19.2757, 45.7684, 1.24449 )
disabled = true

[node name="Rock3" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -18.2247, -48.9601, -42.2664, -32.3431, -36.256, 29.5288, -23.1745, 42.9638, 11.4737, 43.3174, 22.7874, 32.0036, 23.8481, 3.01227 )
disabled = true

[node name="Rock4" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 10.0595, -42.2426, 1.57417, -29.8682, -13.9822, -28.1004, -44.7413, 13.9724, -44.0342, 31.2966, -7.26466, 50.0349, 21.0196, 49.3278, 48.2432, 32.7108, 44.3541, -28.1004, 28.4442, -42.9497 )
disabled = true

[node name="Rock5" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -26.7101, -45.7781, 28.0907, -46.4852, 45.0612, -15.0189, 46.1219, 17.8615, 30.5656, 52.1562, -25.2959, 50.3884, -48.6304, 33.7714, -45.4484, -12.1905 )
disabled = true

[node name="Rock6" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -40.4265, -30.1377, -15.4813, -38.6012, 8.12759, -31.0286, 15.7003, -13.2106, -5.68137, 23.7618, -23.9448, 36.2344, -47.1082, 21.98, -48.89, 7.28012 )
disabled = true

[node name="Rock7" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -39.5356, -23.0105, -17.2631, -36.374, 43.7636, -23.9014, 46.4363, 5.49832, 35.3, 43.3616, 21.9366, 51.3797, -35.5265, 39.798, -44.4355, 26.4345, -43.0992, 11.2892 )
disabled = true

[node name="Rock8" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -44.881, -6.97429, -37.3083, -36.374, 0.554962, -44.8375, 5.90036, -35.9285, 6.79126, -25.2377, 34.8546, -10.5379, 42.4273, 30.4435, 27.282, 46.9252, 14.3639, 50.9342, -44.881, 38.4616 )
disabled = true

[node name="Rock9" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -46.6628, 23.3163, -32.8538, 49.5979, 0.554962, 29.5526, 32.1819, 32.6708, 39.3091, 15.7437, 37.5273, -18.556, 11.6912, -13.2106, -11.4722, -43.5012, -38.6447, -40.383, -31.5175, -10.0924, -36.4174, 11.2892 )
disabled = true
[connection signal="input_event" from="." to="." method="_on_RockPiece_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_RockPiece_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RockPiece_mouse_exited"]
